--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dist/"
 	],
 	"scripts": {
-		"prepack": "npm run build",
+		"prepack": "rm -rf dist && npm run build",
 		"build": "npx tsc",
 		"test": "jest test"
 	},
