--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
       - name: Test using Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
-      - run: yarn install
-      - run: yarn test:ci
+          node-version: '18'
+      - run: npm install
+      - run: npm run test
 
       - name: Tests ✅
         if: ${{ success() }}
