--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
-		"moduleResolution": "node",
+      "esModuleInterop": true,
+      "moduleResolution": "node",
 		"target": "es2015",
 		"module":"commonjs",
 		"lib": ["es2015", "es2016", "es2017", "dom"],
