--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"prepack": "rm -rf dist && npm run build",
 		"build": "npx tsc",
-		"test": "jest test"
+		"test": "jest --runInBand test"
 	},
 	"repository": {
 		"type": "git",
